# hdr

./: CMakeLists.txt  main.cpp
lib/: Autolevels.cpp  Autolevels.hpp  compression_tmo.cpp  compression_tmo.h  gamma_levels.cpp  gamma_levels.h  progress.cpp  progress.h
